--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,11 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "phpcs": "phpcs",
+        "phpcbf": "phpcbf",
+        "phpunit": "phpunit --colors=always",
+        "test": "phpunit tests"
     },
     "config": {
         "preferred-install": "dist",
