--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^2.8",
         "guzzlehttp/guzzle": "~6.0",
         "illuminate/session": "^5.7",
+        "imangazaliev/didom": "^1.13",
         "laravel/lumen-framework": "5.7.*",
         "twbs/bootstrap": "4.1.3",
         "vlucas/phpdotenv": "~2.2"
